<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Screen">

    <androidx.cardview.widget.CardView
        style="@style/ContainerView"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextView"
                android:layout_gravity="center"
                android:text="@string/photo_requirements" />

            <ImageView
                style="@style/ImageView"
                android:id="@+id/photo"
                android:layout_gravity="center"
                android:contentDescription="@string/result" />

            <TextView
                style="@style/TextView"
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:layout_gravity="center|bottom"
                android:padding="20dp"
                android:gravity="center"
                android:background="@color/black" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <Button
        style="@style/Button"
        android:onClick="onClick"
        android:text="@string/short_hair" />

    <Button
        style="@style/Button"
        android:onClick="onClick"
        android:text="@string/medium_hair" />

    <Button
        style="@style/Button"
        android:onClick="onClick"
        android:text="@string/long_hair" />

</LinearLayout>